--- a/rebar.config
+++ b/rebar.config
@@ -1,12 +1,12 @@
 {erl_opts, [debug_info]}.
 {deps, [
-  {cowboy, "2.7.0"},
+  {cowboy, "2.12.0"},
   {jsx,  "3.1.0"}
 ]}.
 
 {relx, [{release, {domain_name_resolver, "0.1.0"},
   [domain_name_resolver,
-    sasl]},
+    sasl, jsx, cowboy]},
   {mode, dev},
   {sys_config, "./config/sys.config"},
   {vm_args, "./config/vm.args"}
